--- a/index.html
+++ b/index.html
@@ -49,24 +49,26 @@
 <!--                    <span class="flow-text blue-text">This is my Main Content</span> -->             
                 <!--For Main Showcase-->    
                 <div class="carousel carousel-slider center" data-indicators="true">
-                    <div class="carousel-fixed-item center">
+<!--                    <div class="carousel-fixed-item center">
                       <a class="btn waves-effect white grey-text darken-text-2">button</a>
                     </div>
-                    <div class="carousel-item red white-text" href="#one!" id="panel-1">
-                      <h2>First Panel</h2>
-                      <p>This is your first panel</p>
+-->                   <div class="carousel-item black white-text" href="#one!" id="panel-1">
+                      <h1>About Us</h1>
+                    <p>We are a group of passionate individuals in the field of Web and Graphic Design.</p> 
                     </div>
-                    <div class="carousel-item amber white-text" href="#two!">
-                      <h2>Second Panel</h2>
-                      <p class="white-text">This is your second panel</p>
+                    <div class="carousel-item black white-text" href="#two!" id="panel-2">
+                      <h1>Our Clients</h1>
+                      <p class="white-text">Join us with our growing number of clients from small businesses to 
+                            large corporate organizations.</p>
                     </div>
-                    <div class="carousel-item green white-text" href="#three!" id="panel-3">
-                      <h2>Third Panel</h2>
-                      <p>This is your third panel</p>
+                    <div class="carousel-item black white-text" href="#three!" id="panel-3">
+                      <h1>Our Projects</h1>
+                      <p>Our young team of creative minds will walk you through your
+                          Projects from start to finish.</p>
                     </div>
-                    <div class="carousel-item blue white-text" href="#four!">
-                      <h2>Fourth Panel</h2>
-                      <p class="white-text">This is your fourth panel</p>
+                    <div class="carousel-item black white-text" href="#four!" id="panel-4">
+                      <h1>Contact Us</h1>
+                      <p class="white-text">Talk to us and together we will make your Vision a reality.</p>
                     </div>
                 </div>
                     
